# UzMorphAnalyser

./: README.md  main.py  setup.cfg  setup.py
docs/: test.xlsx
src/: UzMorphAnalyser.py  affixes.csv  data.csv  exception_stems.csv  exception_words.csv  non_affixed_stems.csv  non_affixed_words.csv  note.txt  number_stems.csv  small_stems.csv  small_words.csv  test.txt  trash codes
src/UzMorphAnalyser/: UzMorphAnalyser.py  __init__.py  affixes.csv  exception_stems.csv  lemma_map.csv  non_affixed_stems.csv  note.txt  number_stems.csv  small_stems.csv  test.txt  test_token.txt
src/UzMorphAnalyser.egg-info/: PKG-INFO  SOURCES.txt
