[metadata]
name = UzMorphAnalyser
version = 0.0.1
author = Ulugbek Salaev
author_email = ulugbek0302@gmail.com
description = Uzbek Morph Analyser for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UlugbekSalaev/UzMorphAnalyser
project_urls =
    Bug Tracker = https://github.com/UlugbekSalaev/UzMorphAnalyser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src